Fix: Get rid of bouncy scroll

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="">
+<html lang="en" class="overscroll-none">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -20,7 +20,7 @@
     
     <title>H2Now</title>
   </head>
-  <body class="bg-white dark:bg-slate-900 transition-colors duration-200">
+  <body class="bg-white dark:bg-slate-900 transition-colors duration-200 overscroll-none">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
